--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@date-fns/utc": "^2.0.1",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3"
   }
 }
