--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@date-fns/utc": "^2.0.1",
     "date-fns": "^3.6.0",
-    "date-fns-tz": "^3.1.3"
+    "date-fns-tz": "^3.1.3",
+    "valibot": "^0.41.0"
   }
 }
